js/src/tests/test262/built-ins/Error/prototype/stack/setter-empty-string.js



















var set = Object.getOwnPropertyDescriptor(Error.prototype, 'stack').set;

for (var i = 0; i < nativeErrors.length; ++i) {
  var Ctor = nativeErrors[i];
  var err = new Ctor('msg');
  set.call(err, '');

  
  
  assert.sameValue(err.stack, '', Ctor.name + ': empty string round-trips through property access');

  verifyProperty(err, 'stack', {
    value: '',
    writable: true,
    enumerable: true,
    configurable: true,
  });
}

reportCompare(0, 0);
